--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-966.1KB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 140.83.57.80, port: 49840, type: vmess, uuid: 2969ad1b-9787-4927-94e6-22f597618de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.94MB/s(Youtube:不良林), server: 120.241.236.215, port: 16213, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.47MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-277.0KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇩🇪 德国-1.29MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
