--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-2.10MB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.29MB/s(Youtube:不良林), server: 193.108.117.75, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-1.82MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-890.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.30MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-277.0KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.31MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
