--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇫🇷 法国-360.1KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-5.15MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-890.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.30MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇸🇬 新加坡-1.10MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-277.0KB/s(Youtube:不良林), server: 120.241.236.215, port: 16111, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-343.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-2.95MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.31MB/s(Youtube:不良林), server: 134.195.196.149, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-1.16MB/s(Youtube:不良林), server: 134.195.196.149, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.10MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.16MB/s(Youtube:不良林)
 rules:
