--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-360.1KB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-5.15MB/s(Youtube:不良林), server: 116.129.254.192, port: 16106, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-890.5KB/s(Youtube:不良林), server: 116.129.254.192, port: 16225, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-343.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-1.44MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇸🇬 新加坡-160.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-966.1KB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-1.06MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 134.195.196.149, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-360.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-160.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-966.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-2.08MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.06MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
