--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 172.99.188.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-1.11MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: 116.129.254.192, port: 16306, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-1.62MB/s(Youtube:不良林), server: 116.129.254.192, port: 16264, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-695.6KB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇩🇪 德国-248.4KB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇸🇬 新加坡-1.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
   - {name: 🇨🇦 加拿大-765.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.31MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 (已存活1天)加拿大-1.22MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.6KB/s(Youtube:不良林)
+      - 🇩🇪 德国-248.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-765.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.31MB/s(Youtube:不良林)
